--- a/website/newsletter/257/index.mdx
+++ b/website/newsletter/257/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: /257
 title: "This Week In React #257: Navigation API, PPR, directives, micro-frontends, i18n, Storybook, Immer | Godot, Uniwind, RCE, iOS filters, Windows, GPU, Hermes, Meta Quest | Node LTS, Safari, Rspack, Vite, SWC, Remix"
-authors: [slorber]
+authors: [slorber, armandpetit]
 date: 11-05-2025
 ---
 
