--- a/website/newsletter/258/index.mdx
+++ b/website/newsletter/258/index.mdx
@@ -8,10 +8,6 @@ unlisted: true
 
 Hi everyone!
 
-<Todo />
-
-🗓 [React Advanced](https://reactadvanced.com/canada/?utm_source=thisweekinreact) - 🇨🇦 Toronto - March 24 & 26. Check out the incredible lineup featuring Wes Bos, Hosh Cameau, Henri Helvetica, and many more top React experts! Get a 10% discount with code "TWIR”
-
 <!-- truncate -->
 
 import Support from "../_support.mdx";
@@ -30,10 +26,10 @@ import Support from "../_support.mdx";
 
 Originally built to power AG Grid’s Integrated Charts, it now serves over **1M npm downloads** each month.
 
-*   🆓 **Free**: A wide range of chart types (bar, line, scatter, area, and more) — free, forever.
-*   🚀 **Fast**: Optimised canvas rendering for large datasets (1M+ points).
-*   🦾 **Accessible**: Built-in support for screen readers and keyboard navigation.
-*   🔄 **AG Grid Integration**: Shared API with AG Grid for seamless integration.
+- 🆓 **Free**: A wide range of chart types (bar, line, scatter, area, and more) — free, forever.
+- 🚀 **Fast**: Optimised canvas rendering for large datasets (1M+ points).
+- 🦾 **Accessible**: Built-in support for screen readers and keyboard navigation.
+- 🔄 **AG Grid Integration**: Shared API with AG Grid for seamless integration.
 
 👉 Get Started for Free: [www.ag-grid.com/charts](https://www.ag-grid.com/charts?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=2025-email-6)
 
@@ -41,10 +37,34 @@ Originally built to power AG Grid’s Integrated Charts, it now serves over **1M
 
 ## ⚛️ React {#react}
 
-<Todo />
+[![TanStack DB 0.5 — Query-Driven Sync](/emails/issues/258/tanstack.jpg)](https://tanstack.com/blog/tanstack-db-0.5-query-driven-sync)
+
+**[TanStack DB 0.5 — Query-Driven Sync](https://tanstack.com/blog/tanstack-db-0.5-query-driven-sync)**
+
+A collection shouldn't dictate what data loads: Your queries should. This concept is now implemented in TanStack DB with a new `syncMode: ‘eager’ | ‘on-demand’ | ‘progressive’` option. This moves the library closer to how GraphQL clients like Apollo/Relay work, where components declare their data dependency, and the client figures out how to load and maintain that data. This can be adapted to work on top of any existing backend API, as long as you provide code to map the query predicates into actual API calls.
+
+---
 
 - 💸 [Build a React frontend for your backend with Lovable and Strapi in this step-by-step tutorial](https://strapi.io/blog/how-to-build-a-frontend-with-lovable-dev-for-your-strapi-backend?utm_campaign=19282052-Newsletter%20Sponsorships&utm_source=React&utm_medium=2nd-sponsor)
+- 📣 Both [Bun](https://bun.com/docs/guides/ecosystem/tanstack-start) and [Vercel](https://vercel.com/changelog/support-for-tanstack-start) announced TanStack Start support, leveraging the Nitro Vite plugin.
+- 👀 [Next.js PR \- New `config.experimental.transitionIndicator` option](https://github.com/vercel/next.js/pull/86000): This turns on an experimental React Transition Indicator feature to trigger your browser's native spinner during pending React transitions. It’s still early, and should only work in Chromium, but I’m excited to give it a try asap\!
+- 🗓 [React Advanced](https://reactadvanced.com/canada/?utm_source=thisweekinreact) - 🇨🇦 Toronto - March 24 & 26. Check out the incredible lineup featuring Wes Bos, Hosh Cameau, Henri Helvetica, and many more top React experts! Get a 10% discount with code "TWIR”
+- 📜 [React 19 Error Boundary Behaves Differently](https://andrei-calazans.com/posts/react-19-error-boundary-changed/): Explains a subtle Error Boundary behavior change that came with React 19, implementing a fail-fast behavior that bails out on the first error instead of aggregating errors.
+- 📜 [Dead Framework Theory](https://aifoc.us/dead-framework-theory/): New frameworks are dead on arrival in a world where React has become the platform. LLMs output React code by default and/or due to hardcoded system prompts, creating a self-reinforcing loop that hinders innovation.
+- 📜 [StyleX: A Styling Library for CSS at Scale](https://engineering.fb.com/2025/11/11/web/stylex-a-styling-library-for-css-at-scale/): StyleX maintainer gives a nice overview of Meta’s CSS-in-JS library.
+- 📜 [The Illusion of Language: What Directives Really Are](https://dev.to/lazarv/the-illusion-of-language-what-directives-really-are-445): Compares directives to C++ pragmas/macros, and tells us what we can learn from history.
+- 📜 [Vercel: The anti-vendor-lock-in cloud](https://vercel.com/blog/vercel-the-anti-vendor-lock-in-cloud): Vercel argues that a framework-defined infrastructure creates more portable code and less lock-in. Next.js adapters formalize the framework-platform contract.
+- 📜 [Everything you need to know about act() in React tests](https://howtotestfrontend.com/resources/react-act-function-everything-you-need-to-know): A deep dive on the test helper function that ensures React pending updates are applied before making assertions.
+- 📜 [Don't Blindly Use useTransition Everywhere](https://www.charpeni.com/blog/dont-blindly-use-usetransition-everywhere): An interactive blog post explains that the UX of a React docs example is not ideal (switching tabs with expensive content), and suggests an improvement.
+- 📜 [Error Handling in React with react-error-boundary](https://certificates.dev/blog/error-handling-in-react-with-react-error-boundary?friend=TWIR): The lib provides a declarative error boundary component for rendering errors, and you can also use `useErrorBoundary()` to trigger it imperatively.
 - 💸 [CodeRabbit - Cut Code Review Time & Bugs in Half](https://coderabbit.link/F8zN5Km)
+- 📦 [ImGui React Runtime](https://github.com/tmikov/imgui-react-runtime): Hermes maintainer created a custom runtime and React renderer for Dear ImGui (C++ GUI lib). Experimental, but clearly shows Static Hermes' ability to mix typed and untyped JS in a single project, while enabling direct, zero-cost FFI bindings to the underlying C++ lib.
+- 📦 [Next-Intl 4.5 \- Introducing `useExtracted()`: The Tailwind of i18n](https://next-intl.dev/blog/use-extracted): This new API is an attempt to bring Tailwind properties (colocation, local reasoning, no naming…) to i18n, improving AI support along the way.
+- 📦 [React Email 5.0 \- Support for dark mode, Tailwind 4, new components, React 19.2, Next.js 16](https://resend.com/blog/react-email-5)
+- 📦 [React Router 7.9.5 \- Unstable instrumentation API, unstable concurrent prerendering](https://github.com/remix-run/react-router/blob/main/CHANGELOG.md#v795)
+- 📦 [Ink 6.5 \- CLI renderer \- New incremental rendering mode to only updates changed lines](https://github.com/vadimdemedes/ink/releases/tag/v6.5.0)
+- 🎥 [Shruti Kapoor \- 4 Features of React 19.2 You Must Know](https://www.youtube.com/watch?v=1aP0HEatAyQ)
+- 🎙️ [Syntax.fm 954 \- Fullstack TanStack\! The Scoop with Tanner Linsley](https://syntax.fm/show/954/fullstack-tanstack-the-scoop-with-tanner-linsley)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -68,22 +88,55 @@ Debug faster. Stay focused. Code confidently.
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+[![Valdi - Cross-platform UI framework](/emails/issues/258/valdi.jpg)](https://github.com/Snapchat/Valdi)
+
+**[Valdi \- Cross-platform UI framework](https://github.com/Snapchat/Valdi)**
+
+Snapchat released a beta version of the cross-platform UI framework they've used in production apps for the last 8 years. It’s not based on React, but also uses a similar declarative model and relies on the Yoga layout engine. TypeScript components are compiled directly to native iOS, Android, and macOS views.
+
+You might also want to read:
+
+- 📖 [FAQ: Why use Valdi instead of React Native?](https://github.com/Snapchat/Valdi/blob/main/docs/docs/faq.md#why-use-valdi-instead-of-react-native)
+- 📖 [Valdi for React Developers](https://github.com/Snapchat/Valdi/blob/main/docs/docs/start-from-react.md)
+
+---
 
 - 💸 [Product for Engineers - Finding a job as a product engineer](https://go.posthog.com/twir-nov12)
+- 🐦 [Konrad Reczko \- React Native Jelly Slider demo](https://x.com/reczko_konrad/status/1986496404777205784): Greatly shows that advanced WebGPU / TypeGPU code can be shared across platforms with minor integration changes.
+- 🐦 [Szymon Rybczak on the recent React Native CLI DevServer vulnerability](https://x.com/SzymonRybczak/status/1986199665000566848): This remote code execution vulnerability was unfortunately not disclosed responsibly. It only impacts 0.80/81, for which the security fix has been backported as soon as possible. Make sure to upgrade\!
+- 👀 [React Native Website PR \- Add docs for IntersectionObserver, IntersectionObserverEntry](https://github.com/facebook/react-native-website/pull/4868): This quite exciting DOM API is coming to React Native\! Even better, I’ve heard it should also work with [`<Fragment ref`\>](https://react.dev/reference/react/Fragment#using-fragment-refs-for-dom-interaction)\!
+- 👀 [React Native Website PR \- Promote Web Performance APIs as stable](https://github.com/facebook/react-native-website/pull/4873): The `global.performance` Web API is about to become officially supported.
+- 📜 [React Native's New Architecture: The Tricky Parts (3/4)](https://blog.swmansion.com/react-natives-new-architecture-the-tricky-parts-3-4-c4638c65927c): Implements native component measurements on Android so that Yoga knows its underlying dimensions.
+- 📜 [Exploring Lynx JS: From Quick Start to CLI Workflows](https://www.callstack.com/blog/exploring-lynx-js-from-quick-start-to-cli-workflows): Callstack devs remind us of this interesting React Native competitor from ByteDance. They created a CLI to ease the creation of greenfield Lynx apps. Speaking of Lynx, it now has [experimental support for the React Compiler](https://lynxjs.org/next/react/react-compiler.html).
+- 📜 [How to Add Vega Support to Your React Native App?](https://blog.swmansion.com/how-to-add-vega-os-support-to-your-react-native-app-2b689d939492)
+- 📜 [Create a Chart with a Secondary Y Axis with Victory Native XL](https://spin.atomicobject.com/victory-native-xl/)
+- 📜 [Building an AI-Powered Note-Taking App \- Part 1: Text Semantic Search](https://blog.swmansion.com/building-an-ai-powered-note-taking-app-in-react-native-part-1-text-semantic-search-3f3c94a2f92b)
+- 📦 [Audio API 0.10 \- Decoding/stretcher modules, linear convolution effect (echo/reverb), worklet performance, RN 0.82](https://github.com/software-mansion/react-native-audio-api/releases/tag/0.10.0)
+- 📦 [Radon IDE 1.13 \- Physical Android devices, Apollo DevTools, Network Inspector and AI improvements](https://github.com/software-mansion/radon-ide/releases/tag/v1.13.0)
+- 📦 [Nitro BLE \- High-performance Bluetooth Low Energy library](https://github.com/zykeco/react-native-ble-nitro)
+- 📦 [Nitro Event Kit \- Access and manage local iOS calendar events](https://github.com/VladyslavMartynov10/react-native-nitro-event-kit)
+- 📦 [Nitro Device Info \- High-performance, most methods are synchronous](https://github.com/l2hyunwoo/react-native-nitro-device-info)
+- 🎥 [Beto \- Getting started with Meta Horizon Development using Expo](https://www.youtube.com/watch?v=24G2tui0Ts8)
 
 ---
 
 ## 🔀 Other {#other}
 
-<Todo />
+- 👀 [Agenda for the 111th meeting of Ecma TC39](https://github.com/tc39/agendas/blob/main/2025/11.md): A packed agenda for next week’s meeting\!
+- 📜 [The Inner Workings of JavaScript Source Maps](https://www.polarsignals.com/blog/posts/2025/11/04/javascript-source-maps-internals)
+- 📜 [Error chaining in JavaScript: cleaner debugging with Error.cause](https://allthingssmitty.com/2025/11/10/error-chaining-in-javascript-cleaner-debugging-with-error-cause/)
+- 📜 [The Web Animation Performance Tier List](https://motion.dev/blog/web-animation-performance-tier-list)
+- 📜 [Why TypeScript Won't Save You](https://cekrem.github.io/posts/why-typescript-wont-save-you/)
+- 📜 [The Weird Parts of position: sticky;](https://frontendmasters.com/blog/the-weird-parts-of-position-sticky/)
+- 📦 [Node.js 25.2 \- Type stripping is now stable](https://nodejs.org/en/blog/release/v25.2.0)
+- 📦 [pnpm 10.21 \-](https://pnpm.io/blog/releases/10.21) [Node](http://Node.js) [runtime installation for deps, new `trustPolicy` option to prevent supply chain attacks](https://pnpm.io/blog/releases/10.21)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+[![alt](/emails/issues/258/meme.jpg)](https://x.com/sebastienlorber/status/1988632437836939348)
 
-[![alt](/emails/issues/215/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/258/meme2.jpg)](https://x.com/Baconbrix/status/1987254038984089764)
 
 See ya! 👋
