--- a/website/newsletter/258/index.mdx
+++ b/website/newsletter/258/index.mdx
@@ -1,12 +1,15 @@
 ---
 slug: /258
-title: "This Week In React #258: ..."
+title: "This Week In React #258: TanStack, Next.js, ImGui, next-intl, React-Email, Ink, React Router | Valdi, IntersectionObserver, Nitro, Radon, Lynx, WebGPU, Audio | TC39, Node, Web Animations, TypeScript, pnpm"
 authors: [slorber]
 date: 11-12-2025
-unlisted: true
 ---
 
 Hi everyone!
+
+Hi everyone, [Seb](https://x.com/sebastienlorber) here\! 👋
+
+This week has been relatively calm in the ecosystem. We have a good variety of community blog posts, releases, and weak signals. I'm not sure what to highlight, so I'll just let you enjoy reading it\!
 
 <!-- truncate -->
 
